--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm --parallel dev",
-    "start": "pnpm -r start",
-    "build": "pnpm -r build"
+    "dev": "bun --filter '*' dev",
+    "build": "bun --filter '*' build"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   }
 }
