--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
   "name": "simple-transit-service",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.1.5",
+  "module": ".",
+  "type": "module",
   "scripts": {
-    "dev": "bun --filter '*' dev",
-    "build": "bun --filter '*' build"
-  },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "dev": "bun --filter 'api' dev & bun --filter 'web' dev"
   },
   "devDependencies": {
     "@types/bun": "latest"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
