--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,15 +1,21 @@
 {
   "name": "api",
-  "module": "index.ts",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
+  "version": "1.0.50",
   "scripts": {
-    "start": "bun index.ts",
-    "dev": "bun --watch index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run --watch src/index.ts"
   },
-  "type": "module"
+  "dependencies": {
+    "db": "workspace:*",
+    "@elysiajs/cors": "^1.2.0",
+    "@elysiajs/swagger": "^1.2.0",
+    "elysia": "latest"
+  },
+  "devDependencies": {
+    "bun-types": "latest"
+  },
+  "exports": {
+    ".": "./src/index.ts"
+  },
+  "module": "src/index.js"
 }
