--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,19 +9,25 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.1.1",
-    "@react-router/serve": "^7.1.1",
+    "@elysiajs/eden": "^1.2.0",
+    "@react-router/fs-routes": "^7.1.3",
+    "@react-router/node": "^7.1.3",
+    "@react-router/serve": "^7.1.3",
+    "api": "workspace:*",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.473.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.3"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.1.1",
+    "@react-router/dev": "^7.1.3",
+    "@types/bun": "^1.1.17",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
+    "elysia": "^1.2.10",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
